<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fall2018.csc2017.memorymatrix.MemoryMatrixActivity">


    <TextView
        android:id="@+id/GameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="380dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="56dp"
        android:padding="7dp"
        android:gravity="center"
        android:text="@string/memorymatrix_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        app:layout_constraintBottom_toTopOf="@+id/userWithBestScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/memoryMatrixNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/new_game"
        app:layout_constraintBottom_toTopOf="@+id/memoryMatrixBoardSizePicker"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameText" />

    <NumberPicker
        android:id="@+id/memoryMatrixBoardSizePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/memoryMatrixNew"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toTopOf="@+id/bestScoreDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/boardSizeLabel"
        android:layout_width="115dp"
        android:layout_height="42dp"
        android:layout_alignBottom="@+id/memoryMatrixBoardSizePicker"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="8dp"
        android:text="@string/board_size"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toTopOf="@+id/bestScoreDescription"
        app:layout_constraintEnd_toStartOf="@+id/memoryMatrixBoardSizePicker"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/memoryMatrixBoardSizePicker"
        app:layout_constraintVertical_bias="0.436" />

    <TextView
        android:id="@+id/bestScoreDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_toStartOf="@+id/memoryMatrixNew"
        android:text="@string/best_score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintBottom_toTopOf="@+id/userWithBestScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userLabel"
        android:layout_width="235dp"
        android:layout_height="52dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/bestScoreDescription"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:text="@string/user"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bestScoreDescription" />

    <TextView
        android:id="@+id/userWithBestScore"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/userLabel"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="124dp"
        android:layout_marginEnd="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/GameText" />

    <TextView
        android:id="@+id/bestScoreLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/userLabel"
        android:layout_below="@+id/userLabel"
        android:layout_marginTop="8dp"
        android:text="@string/score"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="@+id/userLabel"
        app:layout_constraintStart_toStartOf="@+id/userLabel"
        app:layout_constraintTop_toBottomOf="@+id/userLabel" />

    <TextView
        android:id="@+id/bestScore"
        android:layout_width="167dp"
        android:layout_height="49dp"
        android:layout_alignStart="@+id/userWithBestScore"
        android:layout_alignTop="@+id/bestScoreLabel"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userWithBestScore" />
</android.support.constraint.ConstraintLayout>